--- a/src/css/style.css
+++ b/src/css/style.css
@@ -474,11 +474,11 @@
 			top: 0.25em;
 		}
 
-		.image.fit {
+		/*.image.fit {
 			display: block;
 			margin: 0 0 2em 0;
 			width: 100%;
-		}
+		}*/
 
 			.image.fit img {
 				display: block;
@@ -978,7 +978,7 @@
 
 	#banner {
 		background-color: #666666;
-		background-image: url("../images/banner.jpg");
+		background-image: url("../images/space.png");
 		background-size: cover;
 		background-position: center center;
 		background-repeat: no-repeat;
