--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1061,7 +1061,7 @@
 		}
 
 		#footer .copyright {
-			color: #bbb;
+			color: #000000;
 			font-size: 0.9em;
 			margin: 2em 0 0 0;
 			padding: 0;
